<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TodosFragment">

    <data>

        <variable
            name="viewModel"
            type="com.yehorychev.importanttodos.TodosViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/todo_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter a Todo Item"
            android:inputType="text"
            android:text="@={viewModel.newTodoTitle}" />

        <Button
            android:id="@+id/todo_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="@{() -> viewModel.addTodo()}"
            android:text="Save Todo" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/todos_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="top"
            android:layout_weight="1"
            app:spanCount="2"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />

    </LinearLayout>
</layout>