<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.yehorychev.importanttodos.EditTodoViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical"
        tools:context=".EditTodoFragment">

        <EditText
            android:id="@+id/todo_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/enter_a_todo_item"
            android:hint="@string/enter_a_todo_item"
            android:inputType="text"
            android:paddingVertical="20dp"
            android:text="@={viewModel.todo.title}"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/todo_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="20dp"
            android:checked="@={viewModel.todo.completed}"
            android:text="@string/completed" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="@{() -> viewModel.deleteTodoItem()}"
            android:text="@string/delete" />

        <Button
            android:id="@+id/update_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="@{() -> viewModel.updateTodoItem()}"
            android:text="@string/update" />

    </LinearLayout>
</layout>